--- a/Sources/GUI/MainWindow.ui
+++ b/Sources/GUI/MainWindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>ZX Toolkit</string>
+   <string>Retro Toolkit</string>
   </property>
   <widget class="QWidget" name="centralWidget"/>
   <widget class="QMenuBar" name="menuBar">
