--- a/Sources/GUI/MainWindow.ui
+++ b/Sources/GUI/MainWindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>Retro Toolkit</string>
+   <string>8-Bit Toolkit</string>
   </property>
   <widget class="QWidget" name="centralWidget"/>
   <widget class="QMenuBar" name="menuBar">
@@ -45,10 +45,26 @@
     <addaction name="separator"/>
     <addaction name="actionExit"/>
    </widget>
+   <widget class="QMenu" name="menuView">
+    <property name="title">
+     <string>&amp;View</string>
+    </property>
+   </widget>
    <addaction name="menuProject"/>
    <addaction name="menuDebug"/>
+   <addaction name="menuView"/>
    <addaction name="menuHelp"/>
   </widget>
+  <widget class="QDockWidget" name="outputDockWidget">
+   <property name="windowTitle">
+    <string>Output</string>
+   </property>
+   <attribute name="dockWidgetArea">
+    <number>8</number>
+   </attribute>
+   <widget class="LogWidget" name="outputWidget"/>
+  </widget>
+  <widget class="QStatusBar" name="statusBar"/>
   <action name="actionBuild">
    <property name="text">
     <string>&amp;Build</string>
@@ -75,9 +91,15 @@
    </property>
   </action>
  </widget>
- <resources>
-  <include location="resources/resources.qrc"/>
- </resources>
+ <customwidgets>
+  <customwidget>
+   <class>LogWidget</class>
+   <extends>QWidget</extends>
+   <header>GUI/Widgets/LogWidget.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
+ <resources/>
  <connections>
   <connection>
    <sender>actionExit</sender>
