--- a/Sources/GUI/MainWindow.ui
+++ b/Sources/GUI/MainWindow.ui
@@ -11,7 +11,7 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>8-Bit Toolkit</string>
+   <string>Retro Toolkit</string>
   </property>
   <widget class="QWidget" name="centralWidget">
    <layout class="QVBoxLayout" name="verticalLayout">
@@ -93,6 +93,18 @@
    <widget class="LogWidget" name="outputWidget"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
+  <widget class="QToolBar" name="toolBar">
+   <property name="windowTitle">
+    <string>toolBar</string>
+   </property>
+   <attribute name="toolBarArea">
+    <enum>TopToolBarArea</enum>
+   </attribute>
+   <attribute name="toolBarBreak">
+    <bool>false</bool>
+   </attribute>
+   <addaction name="actionBuild"/>
+  </widget>
   <action name="actionBuild">
    <property name="text">
     <string>&amp;Build</string>
