--- a/Sources/GUI/MainWindow.ui
+++ b/Sources/GUI/MainWindow.ui
@@ -69,8 +69,6 @@
     <addaction name="actionNewProject"/>
     <addaction name="actionOpenProject"/>
     <addaction name="separator"/>
-    <addaction name="actionBuild"/>
-    <addaction name="separator"/>
     <addaction name="actionExit"/>
    </widget>
    <widget class="QMenu" name="menuView">
@@ -78,9 +76,19 @@
      <string>&amp;View</string>
     </property>
    </widget>
+   <widget class="QMenu" name="menuBuild">
+    <property name="title">
+     <string>&amp;Build</string>
+    </property>
+    <addaction name="actionBuild"/>
+    <addaction name="separator"/>
+    <addaction name="actionGenerateWAVFile"/>
+    <addaction name="actionPlayWAVFile"/>
+   </widget>
    <addaction name="menuProject"/>
-   <addaction name="menuDebug"/>
    <addaction name="menuView"/>
+   <addaction name="menuBuild"/>
+   <addaction name="menuDebug"/>
    <addaction name="menuHelp"/>
   </widget>
   <widget class="QDockWidget" name="outputDockWidget">
@@ -128,6 +136,16 @@
   <action name="actionExit">
    <property name="text">
     <string>E&amp;xit</string>
+   </property>
+  </action>
+  <action name="actionGenerateWAVFile">
+   <property name="text">
+    <string>Generate &amp;WAV file</string>
+   </property>
+  </action>
+  <action name="actionPlayWAVFile">
+   <property name="text">
+    <string>&amp;Play WAV file</string>
    </property>
   </action>
  </widget>
